err/plonetheme.rcom.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plonetheme'...
Listing './lib/python3.5/site-packages/plonetheme/rcom'...
Listing './lib/python3.5/site-packages/plonetheme/rcom/browser'...
Listing './lib/python3.5/site-packages/plonetheme/rcom/browser/images'...
Listing './lib/python3.5/site-packages/plonetheme/rcom/browser/stylesheets'...
Listing './lib/python3.5/site-packages/plonetheme/rcom/browser/templates'...
Compiling './lib/python3.5/site-packages/plonetheme/rcom/browser/viewlets.py'...
***   File "./lib/python3.5/site-packages/plonetheme/rcom/browser/viewlets.py", line 19
    \#    def update(self):
                          ^
SyntaxError: unexpected character after line continuation character

Listing './lib/python3.5/site-packages/plonetheme/rcom/profiles'...
Listing './lib/python3.5/site-packages/plonetheme/rcom/profiles/default'...
Listing './lib/python3.5/site-packages/plonetheme/rcom/skins'...
Listing './lib/python3.5/site-packages/plonetheme/rcom/skins/plonetheme_rcom_custom_images'...
Listing './lib/python3.5/site-packages/plonetheme/rcom/skins/plonetheme_rcom_custom_templates'...
Listing './lib/python3.5/site-packages/plonetheme/rcom/skins/plonetheme_rcom_styles'...
Listing './lib/python3.5/site-packages/plonetheme.rcom-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
